--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="nav-out">
         <div class="nav-inner">
             <ul class="nav-lists">
-                <li class="Apple" style="background: url(./images/image_small.png) no-repeat;"></li>
+                <li>Apple</li>
                 <li>Mac</li>
                 <li>iPad</li>
                 <li>iPhone</li>
